add add user profile

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -2,6 +2,7 @@
     "buttons": {
         "signin": "Sign In",
         "signup": "Sign Up",
+        "resetPassword": "Reset password",
         "changePassword": "Change password"
     },
     "links": {
@@ -24,11 +25,13 @@
     },
     "text": {
         "signedInAs": "Signed in as",
-        "email": "Email",
+        "headerEmail": "Email",
         "headerSignin": "Sign In to The App",
         "headerSignup": "Sign Up to The App",
         "paragraph": "Start your journey",
         "haveAccount": "Don't have an account?",
-        "existAccount": "Account already exist?"
+        "existAccount": "Account already exist?",
+        "resetPassword": "Enter your email",
+        "changePassword": "Enter a new password"
     }
 }
