--- a/src/i18n/locales/es/admin.json
+++ b/src/i18n/locales/es/admin.json
@@ -7,5 +7,8 @@
     },
     "links": {
         "admin": "Panel de administración"
+    },
+    "alerts": {
+        "users": "Error al cargar usuarios"
     }
 }
