--- a/src/i18n/locales/es/auth.json
+++ b/src/i18n/locales/es/auth.json
@@ -2,7 +2,8 @@
     "buttons": {
         "signin": "Iniciar sesión",
         "signup": "Registrarse",
-        "changePassword": "Cambiar contraseña"
+        "resetPassword": "Restablecer contraseña",
+        "changePassword": "Cambiar la contraseña"
     },
     "links": {
         "back": "Atrás",
@@ -24,11 +25,13 @@
     },
     "text": {
         "signedInAs": "Sesión iniciada como",
-        "email": "Correo electrónico",
+        "headerEmail": "Correo electrónico",
         "headerSignin": "Iniciar sesión en la aplicación",
         "headerSignup": "Registrarse en la aplicación",
         "paragraph": "Comienza tu aventura",
         "haveAccount": "¿No tienes una cuenta?",
-        "existAccount": "¿Ya existe una cuenta?"
+        "existAccount": "¿Ya existe una cuenta?",
+        "resetPassword": "Introduce tu correo electrónico",
+        "changePassword": "Introduce una nueva contraseña."
     }
 }
