--- a/src/i18n/locales/ua/auth.json
+++ b/src/i18n/locales/ua/auth.json
@@ -2,6 +2,7 @@
     "buttons": {
         "signin": "Увійти",
         "signup": "Зареєструватися",
+        "resetPassword": "Скинути пароль",
         "changePassword": "Змінити пароль"
     },
     "links": {
@@ -24,11 +25,13 @@
     },
     "text": {
         "signedInAs": "Ви увійшли як",
-        "email": "Електронна пошта",
+        "headerEmail": "Електронна пошта",
         "headerSignin": "Увійти в додаток",
         "headerSignup": "Зареєструватися в додатку",
         "paragraph": "Почніть свою подорож",
         "haveAccount": "Немаєте облікового запису?",
-        "existAccount": "Обліковий запис вже існує?"
+        "existAccount": "Обліковий запис вже існує?",
+        "resetPassword": "Введіть свою електронну адресу",
+        "changePassword": "Введіть новий пароль"
     }
 }
