--- a/src/i18n/locales/ua/inventory.json
+++ b/src/i18n/locales/ua/inventory.json
@@ -132,7 +132,8 @@
         "error": "Помилка при збереженні",
         "like": "Подобається лише зареєстрованим користувачам",
         "image": "Сталася помилка під час завантаження зображення",
-        "field": "Неможливо додати більше полів типу {{fieldTypeLabel}} (ліміт {{fieldTypeLimit}})"
+        "field": "Неможливо додати більше полів типу {{fieldTypeLabel}} (ліміт {{fieldTypeLimit}})",
+        "requiredFields": "Будь ласка, заповніть обов'язкові поля"
     },
     "badges": {
         "example": "Приклад:",
