--- a/src/i18n/locales/ua/profile.json
+++ b/src/i18n/locales/ua/profile.json
@@ -16,7 +16,10 @@
     },
     "buttons": {
         "dark": "Темний",
-        "light": "Світлий",
-        "changePassword": "Змінити пароль"
+        "light": "Світлий"
+    },
+    "toasts": {
+        "updateUserSucces": "Дані успішно оновлено",
+        "updateUserFailed": "Дані не оновлено."
     }
 }
