--- a/src/i18n/locales/ua/admin.json
+++ b/src/i18n/locales/ua/admin.json
@@ -7,5 +7,8 @@
     },
     "links": {
         "admin": "Панель адміністратора"
+    },
+    "alerts": {
+        "users": "Помилка завантаження користувачів"
     }
 }
