--- a/src/i18n/locales/ua/item.json
+++ b/src/i18n/locales/ua/item.json
@@ -15,6 +15,7 @@
     },
     "toasts": {
         "like": "Подобається лише автентифікованим користувачам",
+        "likeWithoutId": "Елемент не створено",
         "errorLike": "Під час вподобування сталася помилка"
     }
 }
