--- a/src/i18n/locales/ua/profile.json
+++ b/src/i18n/locales/ua/profile.json
@@ -3,7 +3,11 @@
         "name": "Ім'я",
         "email": "Електронна пошта",
         "interface": "Інтерфейс",
-        "language": "Мова"
+        "language": "Мова",
+        "googleId": "GoogleID",
+        "facebookId": "FacebookID",
+        "status": "Статус",
+        "roles": "Ролі"
     },
     "options": {
         "english": "Англійська",
