--- a/src/i18n/locales/ua/inventory.json
+++ b/src/i18n/locales/ua/inventory.json
@@ -114,7 +114,8 @@
         "selectFile": "Вибрати файл",
         "create": "Створити",
         "update": "Оновити",
-        "send": "Надіслати"
+        "send": "Надіслати",
+        "token": "Отримати токен"
     },
     "dndForm": {
         "CUSTOM_ID": "Форматувати користувацький ідентифікатор",
@@ -133,7 +134,8 @@
         "like": "Подобається лише зареєстрованим користувачам",
         "image": "Сталася помилка під час завантаження зображення",
         "field": "Неможливо додати більше полів типу {{fieldTypeLabel}} (ліміт {{fieldTypeLimit}})",
-        "requiredFields": "Будь ласка, заповніть обов'язкові поля"
+        "requiredFields": "Будь ласка, заповніть обов'язкові поля",
+        "token": "Токен"
     },
     "badges": {
         "example": "Приклад:",
